--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyText
-  user_id: 1
+  content: post1
+  user: one
 
 two:
-  content: MyText
-  user_id: 1
+  content: post2
+  user: two
+
+three:
+  content: post3
+  user: three
