--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  email: MyString
+  name: user1
+  email: user1@example.com
 
 two:
-  name: MyString
-  email: MyString
+  name: user2
+  email: user2@example.com
+  
+three:
+  name: user3
+  email: user3@example.com
